--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.3",
     "@glidejs/glide": "^3.4.1",
+    "@popperjs/core": "^2.9.2",
     "bootstrap": "^4.5.3",
     "grunt": "^1.3.0",
     "grunt-concurrent": "^3.0.0",
